Name:			monadiccp
Version:		0.7.1
Description:		Monadic Constraint Programming framework
License:		BSD3
License-file:		LICENSE
Author:			Tom Schrijvers, Pieter Wuille
Maintainer:		tom.schrijvers@ugent.be
Build-Type:		Simple
Category:		control
Synopsis:		Constraint Programming
Homepage:		http://users.ugent.be/~tschrijv/MCP/
Cabal-Version:		>=1.6
Extra-Source-Files: 	examples/*.hs lib/*.cpp lib/*.h

-- examples/Alpha.hs examples/Grocery.hs examples/MagicSquare.hs examples/Olympic.hs examples/Partition.hs examples/Queens.hs examples/Ring.hs examples/StressDomain.hs examples/TryDemo.hs examples/Zebra.hs

Flag RuntimeGecode
    Description:	Include the RuntimeSolver and SearchSolver for Gecode. Requires a working Gecode 3.1 installation.
    Default:		False

Flag Debug
    Description:	Generate debug output
    Default:		False

library
    Build-Depends:	base >= 2, base < 5, containers, mtl, haskell98, random, pretty, Monatron >= 0.3
    Exposed-Modules:	Data.Expr.Sugar
                        Control.CP.SearchTree
                        Control.CP.Transformers
                        Control.CP.ComposableTransformers
                        Control.CP.Solver
                        Control.CP.PriorityQueue
                        Control.CP.Queue
                        Control.CP.FD.Interface
                        Control.CP.FD.OvertonFD.OvertonFD
                        Control.CP.FD.OvertonFD.Sugar
                        Control.CP.EnumTerm
                        Control.CP.FD.Solvers
                        Control.CP.FD.Gecode.CodegenSolver
                        Control.CP.FD.Model
                        Control.CP.FD.Example
    Other-Modules:	Data.Expr.Data
                        Data.Expr.Util
                        Data.Linear
                        Control.CP.FD.Gecode.Common
                        Control.CP.FD.OvertonFD.Domain
                        Control.CP.FD.SimpleFD
                        Control.CP.FD.Graph
                        Control.CP.FD.Decompose
                        Control.CP.FD.FD
                        Control.CP.Debug
                        Control.Mixin.Mixin
                        Control.CP.SearchSpec.Language
                        Control.CP.SearchSpec.Generator
                        Language.CPP.Syntax.AST
                        Language.CPP.Pretty
    GHC-Prof-Options:	-auto-all -caf-all
    Include-Dirs:	lib
    if flag(Debug)
        CPP-Options:	-DDEBUG
        CC-Options:	"-ggdb3" "-Wall"
    else
        CC-Options:	"-g0" "-DNDEBUG" "-Wall"
    if flag(runtimegecode)
        C-Sources:		lib/gecodeglue.cpp
        Extra-Libraries:	gecodesupport gecodeset gecodeint gecodekernel gecodesearch
        Exposed-Modules:	Control.CP.FD.Gecode.Runtime
                                Control.CP.FD.Gecode.RuntimeSearch
        Other-Modules:		Control.CP.FD.Gecode.Interface
        CPP-Options:		-DRGECODE
        Frameworks:		gecode
