Name:			monadiccp
Version:		0.7.6
Description:		Monadic Constraint Programming framework
License:		BSD3
License-file:		LICENSE
Author:			Tom Schrijvers, Pieter Wuille
Maintainer:		maik.riechert@arcor.de
Build-Type:		Simple
Category:		control
Synopsis:		Constraint Programming
Homepage:		http://users.ugent.be/~tschrijv/MCP/
Bug-reports:		https://github.com/neothemachine/monadiccp/issues
Cabal-Version:		>=1.6
Extra-Source-Files: 	examples/*.hs
Data-Files:		README.md

tested-with:     
                 GHC==7.6.3

source-repository head
  type:      git
  location:  https://github.com/neothemachine/monadiccp.git

Flag Debug
    Description:	Generate debug output
    Default:		False

library
    Build-Depends:	base >= 2, base < 5, containers, mtl, random, pretty, parsec >= 3.0
    Exposed-Modules:	Data.Expr.Sugar
                        Data.Expr.Data
                        Data.Expr.Util
                        Data.Linear
                        Control.CP.SearchTree
                        Control.CP.Transformers
                        Control.CP.ComposableTransformers
                        Control.CP.Solver
                        Control.CP.PriorityQueue
                        Control.CP.Queue
                        Control.CP.FD.Interface
                        Control.CP.FD.OvertonFD.OvertonFD
                        Control.CP.FD.OvertonFD.Sugar
                        Control.CP.EnumTerm
                        Control.CP.FD.Solvers
                        Control.CP.FD.Model
                        Control.CP.FD.Example
                        Control.CP.FD.FD
                        Control.CP.Debug
                        Control.CP.FD.SearchSpec.Data
                        Control.CP.FD.OvertonFD.Domain
                        Control.CP.FD.SimpleFD
                        Control.CP.FD.Graph
                        Control.CP.FD.Decompose             
                        Control.Search.Language
                        Control.Search.Stat
                        Control.Search.Generator
                        Control.Search.Combinator.For
                        Control.Search.Combinator.Until
                        Control.Search.Combinator.If
                        Control.Search.Combinator.OrRepeat
                        Control.Search.Combinator.Let
                        Control.Search.Combinator.Success
                        Control.Search.Combinator.Base
                        Control.Search.Combinator.Failure
                        Control.Search.Combinator.Once
                        Control.Search.Combinator.And
                        Control.Search.Combinator.Repeat
                        Control.Search.Combinator.Or
                        Control.Search.Combinator.Post
                        Control.Search.Combinator.Misc
                        Control.Search.Combinator.Print
                        Control.Search.Memo
                        Control.Search.GeneratorInfo
                        Control.Search.Constraints
                        Control.Search.MemoReader
                        Control.Search.SStateT
                        Control.Mixin.Mixin
                        Language.CPP.Syntax.AST
                        Language.CPP.Pretty
    Other-Modules:	    Control.Monatron.Monatron
                        Control.Monatron.MonadInfo
                        Control.Monatron.AutoLift
                        Control.Monatron.Operations
                        Control.Monatron.Zipper
                        Control.Monatron.IdT
                        Control.Monatron.Codensity
                        Control.Monatron.Transformer
                        Control.Monatron.Open
                        Control.Monatron.AutoInstances
                        Control.Monatron.MonadT
                        Control.Monatron.Monad
                        Control.Monatron.ZipperExamples
    GHC-Prof-Options:	-auto-all -caf-all
    if flag(Debug)
        CPP-Options:	-DDEBUG
        CC-Options:	"-ggdb3" "-Wall"
    else
        CC-Options:	"-g0" "-DNDEBUG" "-Wall"
